<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/mainText"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:focusable="false"
        android:inputType="numberSigned"
        android:longClickable="false"
        android:paddingBottom="0dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="#F1F1F1"
        android:textSize="54sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="LabelFor,TextSizeCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/textUpper"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:focusable="false"
        android:inputType="numberSigned"
        android:longClickable="false"
        android:textAlignment="textEnd"
        android:textColor="#F0F0F0"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/sign"
        android:layout_width="48dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:focusable="false"
        android:inputType="none"
        android:longClickable="false"
        android:textAlignment="center"
        android:textColor="#F0F0F0"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnComma"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onCommaPressed"
        android:text="@string/buttonComma"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        android:layout_width="181dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button0"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnComma"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button3"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button1"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button2"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button6"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintTop_toBottomOf="@+id/btn9"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button4"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button5"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn8"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button9"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpercent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button8"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlusMinus"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onDigitPressed"
        android:text="@string/button7"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAC"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDivide"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="22dp"
        android:onClick="onOperationClick"
        android:text="@string/buttonDivide"
        android:textColor="#795548"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlus"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="22dp"
        android:onClick="onOperationClick"
        android:text="@string/buttonPlus"
        android:textColor="#795548"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEquals"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="20dp"
        android:onClick="onEqualsClick"
        android:text="@string/buttonEquals"
        android:textColor="#795548"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlusMinus"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onPlusMinusClick"
        android:text="@string/buttonPlusMinus"
        android:textColor="#6D4C41"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_200"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnpercent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnpercent"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:onClick="onPercentClick"
        android:text="@string/buttonPercent"
        android:textColor="#6D4C41"
        android:textSize="34sp"
        app:backgroundTint="@color/gray_200"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMinus"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="22dp"
        android:onClick="onOperationClick"
        android:text="@string/buttonMinus"
        android:textColor="#795548"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAC"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginEnd="10dp"
        android:longClickable="true"
        android:onClick="onRemoveClick"
        android:text="@string/buttonAC"
        android:textColor="#6D4C41"
        android:textSize="24sp"
        app:backgroundTint="@color/gray_200"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlusMinus"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMultiply"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:onClick="onOperationClick"
        android:text="@string/buttonMultiply"
        android:textColor="#795548"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>